# parquet-test

./: pyproject.toml
parquet_demo/notebook/: reading-performance.ipynb  writing-performance.ipynb
parquet_demo/timer/: timer.py
