[tool.poetry]
name = "parquet-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "parquet_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
ipykernel = "^6.16.0"
pyarrow = "^9.0.0"
seaborn = "^0.12.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
